--- a/manifest.json
+++ b/manifest.json
@@ -9,8 +9,16 @@
   //       "js": ["jquery-min.js"]
   //     }
   //   ],
+    "browser_action": {
+    "default_title": "Round",
+    "default_icon": {
+            "19": "images/icon_19.png",
+            "38": "images/icon_38.png"
+          },
+    "default_popup": "pages/popup.html"
+  },
   "background": {
     "scripts": ["/background/analytics.js"]
   },
-  "permissions": [ "history", "tabs", "http://*/*", "https://*/*" ]
+  "permissions": [ "history", "tabs", "storage", "http://*/*", "https://*/*" ]
 }
