--- a/manifest.json
+++ b/manifest.json
@@ -1,24 +1,19 @@
 {
   "name": "Round",
-  "description": "Analyse and provide feedback on news consumption",
+  "description": "Analyze and provide feedback on news consumption",
   "version": "1.0",
   "manifest_version": 2,
-  // "content_scripts": [
-  //     {
-  //       "matches": ["http://*/*", "https://*/*"],
-  //       "js": ["jquery-min.js"]
-  //     }
-  //   ],
     "browser_action": {
     "default_title": "Round",
     "default_icon": {
             "19": "images/icon_19.png",
             "38": "images/icon_38.png"
           },
-    "default_popup": "pages/popup.html"
+    "default_popup": "pages/popup.html",
+    "js": "pages/js/popup.js"
   },
   "background": {
-    "scripts": ["/background/analytics.js"]
+    "scripts": ["background.js"]
   },
   "permissions": [ "history", "tabs", "storage", "http://*/*", "https://*/*" ]
 }
