--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,12 @@
   "description": "Analyze and provide feedback on news consumption",
   "version": "1.0",
   "manifest_version": 2,
-    "browser_action": {
+  "content_scripts": [{
+    "matches": ["http://*/*", "https://*/*"],
+    "js": ["/lib/jquery-min.js"]
+  }],
+  "web_accessible_resources": [ "pages/profile.html" ],
+  "browser_action": {
     "default_title": "Round",
     "default_icon": {
             "19": "images/icon_19.png",
