--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Round",
-  "description": "Track and provide feedback on news consumption",
-  "version": "1.0",
+  "description": "Track your news consumption and become well-rounded!",
+  "version": "0.0.1",
   "manifest_version": 2,
   "content_scripts": [{
     "matches": ["http://*/*", "https://*/*", "http://www.nytimes.com/*", "https://www.buzzfeed.com/*"],
